--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "structure",
     "json"
   ],
-  "author": "Ayon Lee <i@hyurl.com>",
+  "author": "A-yon Lee <i@hyurl.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/hyurl/structured-clone/issues"
@@ -27,6 +27,5 @@
     "@hyurl/utils": "^0.2.8",
     "esm": "^3.2.25",
     "mocha": "^7.2.0"
-  },
-  "dependencies": {}
+  }
 }
